Rresh to adopt JRE 11